[project]
name = "comfyui-trtupscaler"
description = "TensorRT Upscaler for ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/sugarkwork/comfyui-trtupscaler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "sugarknight"
DisplayName = "comfyui-trtupscaler"
Icon = ""
